Updated setup.js script to add indexes. Added index on GeometryID and descriptors, rather that only descriptors, but not sure if it is a good idea.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Environmental-Services",
     "version": "0.0.0",
-    "description": "Provide remote sensing and climate data related to unit geometries.",
+    "description": "Remote sensing and climate data services related to geographic locations and regions.",
     "engines": {
         "arangodb": "^3.0.0"
     },
