Updated to manage unit data.
Updated collections and services for unit remote sensing data. Need to check all services and align with RapidAPI document and others.

--- a/manifest.json
+++ b/manifest.json
@@ -38,22 +38,28 @@
             "default": "DroughtObservatoryMap"
         },
         "collectionShapes": {
-            "description": "Shapes collection name",
+            "description": "Unit geometries collection name",
             "type": "string",
             "required": true,
             "default": "Shapes"
         },
         "collectionShapeData": {
-            "description": "ShapeData collection name",
+            "description": "Shapes remote sensing collection name",
             "type": "string",
             "required": true,
             "default": "ShapeData"
+        },
+        "collectionUnitData": {
+            "description": "Units remote sensing collection name",
+            "type": "string",
+            "required": true,
+            "default": "UnitData"
         },
         "collectionUnitShapes": {
             "description": "UnitShapes collection name",
             "type": "string",
             "required": true,
-            "default": "UnitShapes"
+            "default": "UnitPolygons"
         },
         "collectionDataset": {
             "description": "Dataset collection name",
